Just changed manifest file to not open when any tab is created.

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,11 @@ body.dark {
     --highlight-border: #00ffcc;
     
 }
-
+html, body {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
 body {
     margin: 0;
     background: var(--bg);
